# cibc_statements_parser

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  cli_args_parser.py  main.py  pdf_processor.py  table_extractor.py  table_headers.py  utils.py
src/constants/: __init__.py  keywords.py  provinces.py  regexps.py  table_headers.py
tests/: __init__.py  cli_args_parser_test.py  pdf_processor_test.py  table_extractor_test.py  utils_test.py
