[project]
name = "cibc-statements-parser"
version = "0.0.1"
requires-python = ">=3.13"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
exclude = ["tests/fixtures"]
# enable all flake8 rules plus isort-style imports
lint.select = ["ALL"]
lint.ignore = [
  "D203",   # conflicting docstring spacer rule
  "D212",   # confilicting docstring rule - keep D213 (multi-line-summary-second-line)
  "D413",   # Missing blank line after last section ("Returns")
  "TD003",  # Missing issue link for this TODO

  # Temporary
  "D",      # All docstring issues are ignored till the package is not ready for use
  "ERA001", # Found commented-out code
  "FIX002", # Line contains TODO, consider resolving the issue
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "TCH003"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = """
    --strict-markers
    --strict-config
    -ra
    --tb=short
    -q
"""

# Directories to search for tests. Dot means "top-level project path".
testpaths = [
    "tests",
]

# Pattern to identify test files
python_files = [
    "test_*.py",
    "*_test.py",
]